# napalm-srlinux

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  Install.md  MANIFEST.in  Makefile  README.md  README.md.old  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  zensical.toml
.clab/: .ci-topology.yml.bak  ci-topology.yml  record-topology.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: development.md  index.md  install.md  migration.md  quickstart.md
docs/guide/: commit-confirm.md  config-management.md  connection.md
docs/reference/: index.md  interfaces.md  routing.md  system.md  tools.md
docs/stylesheets/: extra.css
examples/: example.py  example_script.py
napalm_srl/: __init__.py  gnmi_pb2.py  jsondiff.py  srl.py
napalm_srl/gnmi_protobuf/v080/: gnmi_pb2.py  gnmi_pb2_grpc.py
napalm_srl/utils/: __init__.py
napalm_srlinux/: __init__.py  device.py  helpers.py  srlinux.py  types.py
test/ci/: commit_confirm.py  compare_config.py  config_replace.py  create_use_dedicated_user_account.py  get_interfaces_ip.py  get_vlans.py  getters_smoke.py  json_rpc_certificates.py  load_commit_rollback.py  no_ip_address.py  test.py
test/unit/: TestNokiaSRLDriver.py  conftest.py  fixture_names.py  jsonrpc_client.py  test_cli.py  test_config_workflow.py  test_device.py  test_getters.py  test_helpers.py
test/unit/mocked_data/test_get_arp_table/normal/: __interface_name_____.txt  __network_instance_name_____.txt  _network_instance_name_____interface_name____subinterface__state.json  expected_result.json  interface_name___.txt  network_instance_name___.txt
test/unit/mocked_data/test_get_arp_table_with_vrf/normal/: __interface_name_____.txt  __network_instance_name_TEST___.txt  __network_instance_name_____.txt  _network_instance_name_TEST___interface_name____subinterface__state.json  expected_result.json
test/unit/mocked_data/test_get_bgp_config/normal/: ___network_instance_protocols_bgp__.txt  _network_instance_name____protocols_bgp__state.json  _network_instance_protocols_bgp.txt  expected_result.json
test/unit/mocked_data/test_get_bgp_neighbors/normal/: __system_information__.txt  _network_instance_name____protocols_bgp__system_information__state.json  expected_result.json
test/unit/mocked_data/test_get_bgp_neighbors_detail/normal/: ___network_instance_name_____.txt  expected_result.json
test/unit/mocked_data/test_get_config/normal/: _____.txt  (+1 more)
test/unit/srl/: initial.conf  merge_good.conf  merge_good.diff  merge_typo.conf  new_good.conf  new_good.diff  new_typo.conf
tools/: record_fixtures.py
(+77 files in other folders)
