[build-system]
requires = ["setuptools>=56.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm-srl"
version="1.0.2"
description="Network Automation and Programmability Abstraction Layer driver for Nokia SR Linux"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
]
authors = [
  { name="Jose Valente", email="jose.valente@nokia.com" },
  { name="Jeroen van Bemmel", email="jeroen.van_bemmel@nokia.com" },
]

[project.urls]
"Homepage" = "https://github.com/napalm-automation-community/napalm-srlinux"
"Bug Tracker" = "https://github.com/napalm-automation-community/napalm-srlinux/issues"

[project.optional-dependencies]
tests = [
  'pytest',
  'ruff',
]
