[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm-srlinux"
version = "2.0.0"
description = "NAPALM driver for Nokia SR Linux (JSON-RPC)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "napalm>=5.0.0,<6",
    "httpx>=0.27.0",
]
classifiers = [
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
authors = [
    { name = "Jose Valente", email = "jose.valente@nokia.com" },
    { name = "Jeroen van Bemmel", email = "jeroen.van_bemmel@nokia.com" },
]

[project.urls]
"Homepage" = "https://github.com/napalm-automation-community/napalm-srlinux"
"Bug Tracker" = "https://github.com/napalm-automation-community/napalm-srlinux/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "rich",
]
docs = [
    "zensical>=0.0.45",
]

[tool.setuptools]
packages = ["napalm_srlinux"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test/unit"]
addopts = "-v"
